Fix alignment for extra block for catalog page on mobile

--- a/source/sass/blocks/extra.scss
+++ b/source/sass/blocks/extra.scss
@@ -7,6 +7,11 @@
   @include container();
 }
 
+.extra__title {
+  padding-top: 12px;
+  padding-bottom: 33px;
+}
+
 .extra__list {
   margin: 0;
   padding: 0;
