--- a/source/sass/blocks/subject-title.scss
+++ b/source/sass/blocks/subject-title.scss
@@ -1,32 +1,65 @@
+// .subject-title {
+//   font-size: 24px;
+//   font-weight: 400;
+
+//   &--extra {
+//     margin-bottom: 10px;
+//   }
+// }
+
+// .subject-title span {
+//   display: table;
+//   position: relative;
+//   padding-right: 21px;
+
+//   &::after {
+//     content: "";
+//     display: block;
+//     position: absolute;
+//     top: 50%;
+//     left: 100%;
+//     width: 9999px;
+//     height: 3px;
+//     transform: translate(0, -50%);
+//     background: $primary-color;
+//   }
+// }
+
+// .subject-title--wrap span {
+//   &::after {
+//     top: 31%;
+//   }
+// }
+
 .subject-title {
+  display: flex;
+  margin: 0;
+  padding-left: 20px;
+  border: none;
   font-size: 24px;
   font-weight: 400;
 
-  &--extra {
-    margin-bottom: 10px;
-  }
-}
-
-.subject-title span {
-  display: table;
-  position: relative;
-  padding-right: 21px;
-
+  &::before,
   &::after {
     content: "";
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 100%;
-    width: 9999px;
+    position: relative;
+    top: 13px;
+    width: 20px;
     height: 3px;
-    transform: translate(0, -50%);
+
     background: $primary-color;
   }
-}
 
-.subject-title--wrap span {
+  &::before {
+    display: none;
+    @include md-size() {
+      display: block;
+      margin-right: 20px;
+    }
+  }
+
   &::after {
-    top: 31%;
+    flex-grow: 2;
+    margin-left: 20px;
   }
 }
